css/scroll.css
.scroll-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: -moz-fit-content;
    width: fit-content;
    margin: 0 auto;
}

.scroll-container > div {
    height: fit-content;
}

@media (max-width: 480px) {
    .scroll-container {
        grid-template-columns: 1fr;
        grid-row-gap: 2vh;
    }
}

label > select, label > button {
    margin-left: 5px;
}

.scroll-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.scroll-section button {
    width: fit-content;
}

.scroll-section > label:not(:last-child) {
    margin-bottom: 1em;
}

.scroll-section > label {
    font-weight: bold;
    text-align: center;
}

#scroll-craft-components {
    height: calc(100% - 0.75rem + 3px);
    box-sizing: border-box;
    padding: 0.5em 0;
}

#scroll-skills {
    padding: 0.5em 0;
}

.combination-box {
    display: grid;
    grid-template-columns: repeat(1, min-content);
    font-weight: bold;
    grid-gap: 0.5vh 0vw;
    justify-content: center;
}

.combination-box div {
    display: flex;
    justify-content: center;
}

.combination-box span {
    display: inline-block;
    height: min-content;
    margin: auto 0;
    white-space: nowrap;
    text-align: center;
}

.combination-box img {
    width: 30px;
    margin: 0 0.25em;
}

#results {
    display: grid;
    justify-content: center;
    grid-column-gap: 1em;
    margin: 2vh 1em;
    grid-gap: 3vh 2em;
    grid-template-columns: repeat(auto-fill, 100px);
}

#results-warning {
    margin: 1vh;
    text-align: justify;
}

#craft-results {
    font-weight: bold;
    display: flex;
    flex-direction: column;
    margin-top: 1em;
    border-top: 1px solid black;
    padding-top: 1em;
}

#craft-results span:first-child {
    text-align: center;
}

#craft-results > span > span {
    font-weight: normal;
}

#craft-results-type span:not(:last-child):not(:nth-last-child(2))::after {
    content: ", ";
}

#craft-results-type span:last-child::before {
    content: " and "
}

#scroll-skills-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.results-parent {
    display: none;
    max-width: 90%;
    margin: 0 auto;
    min-width: 74px;
    margin-top: 2vh;
}

